# zapzap

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  BACKEND_API.md  CLAUDE.md  Dockerfile  Dokerfile  GAME_RULES.md  MIGRATION_GUIDE.md  README.legacy.md  README.md  TODO.md  app.js  deploy.sh  docker-compose.yml  gameError.js  gameError.test.js  logger.js  package-lock.json  package.json  party.js  party.test.js  player.js  player.test.js  playwright.config.js  rebuild.sh  round.js  round.test.js  utils.js  utils.js.bak  utils.test.js
data/: hard_vince_genetic_params.json  hard_vince_optimized_params.json  ml_model_fair_test.json  ml_model_ml_v1.json  ml_model_ml_v2.json  ml_model_ml_v3_easy.json  ml_model_ml_v4_medium.json  ml_model_ml_v5_hard.json  ml_model_ml_v6_optimized.json  ml_model_training_test.json  thibot_genetic_params.json  zapzap.db
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
native/: Cargo.toml  benchmark.js  index.d.ts  index.js  package-lock.json  package.json  test-comparison.js  test-ml-components.js
native/src/: card_analyzer.rs  fast_dqn.rs  feature_extractor.rs  game_state.rs  headless_engine.rs  lib.rs  lightweight_dqn.rs  trace_config.rs
native/src/strategies/: drl_strategy.rs  hard_bot.rs  mod.rs  thibot.rs
native/src/training/: collector.rs  config.rs  dueling_dqn.rs  mod.rs  model_io.rs  replay_buffer.rs  sum_tree.rs  trainer.rs  transition.rs
public/: app.css  (+1 more)
zapzap-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
zapzap-rust/src/: lib.rs  main.rs
zapzap-rust/src/api/: mod.rs  sse.rs
zapzap-rust/src/api/dto/: mod.rs
zapzap-rust/src/api/middleware/: auth_middleware.rs
zapzap-rust/src/api/routes/: admin.rs  auth.rs  bots.rs  game.rs  health.rs  history.rs  mod.rs  party.rs  players.rs  stats.rs
zapzap-rust/src/application/: mod.rs
zapzap-rust/src/application/auth/: login_user.rs  mod.rs  register_user.rs
zapzap-rust/src/application/bot/: mod.rs  reflect_on_round.rs
zapzap-rust/src/application/game/: call_zapzap.rs  draw_card.rs  get_game_state.rs  mod.rs  next_round.rs  play_cards.rs  select_hand_size.rs
zapzap-rust/src/application/party/: create_party.rs  delete_party.rs  get_party_details.rs  join_party.rs  leave_party.rs  list_parties.rs  mod.rs  start_party.rs
zapzap-rust/src/domain/entities/: mod.rs  party.rs  player.rs  round.rs  user.rs
zapzap-rust/src/domain/repositories/: mod.rs  party_repository.rs  user_repository.rs
zapzap-rust/src/domain/services/: game_service.rs  mod.rs
zapzap-rust/src/domain/value_objects/: game_state.rs  mod.rs  party_settings.rs
zapzap-rust/src/infrastructure/: app_state.rs  mod.rs
zapzap-rust/src/infrastructure/auth/: jwt_service.rs  mod.rs  password.rs
zapzap-rust/src/infrastructure/bot/: card_analyzer.rs  llm_memory.rs  mod.rs
zapzap-rust/src/infrastructure/bot/strategies/: easy_bot.rs  hard_bot.rs  llm_bot.rs  medium_bot.rs  mod.rs  thibot.rs  vince_bot.rs
zapzap-rust/src/infrastructure/database/repositories/: mod.rs  party_repo.rs  user_repo.rs
zapzap-rust/src/infrastructure/services/: llm_service.rs  mod.rs  session_manager.rs
zapzap-rust/tests/: api_tests.rs
(+216 files in other folders)
