[package]
name = "zapzap-backend"
version = "0.1.0"
edition = "2021"
authors = ["ZapZap Team"]
description = "ZapZap card game backend server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.15"  # For verifying existing bcrypt hashes during migration

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
smallvec = { version = "1", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-broadcast = "0.7"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP client (for Google OAuth) - using rustls instead of native-tls to avoid OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

[features]
default = []
bedrock = ["aws-config", "aws-sdk-bedrockruntime"]

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[dependencies.aws-config]
version = "1.5"
features = ["behavior-version-latest"]
optional = true

[dependencies.aws-sdk-bedrockruntime]
version = "1"
optional = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
